--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,15 +7,24 @@ body
     margin: 0%;
     padding: 0%;
 }
-#container
+#cabecera
 {
+    background: mediumblue;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0
+    0.5);
+    color: white;
     width: 70%;
-    padding: 1cm;
     text-align-last: left;
-    border: 1px; 
+    font-weight: bold; 
     margin: 0 auto;
 }
 
-#container h1
+#container 
 {
-  font-size: 20px;
+width: 70%;
+padding: 0;
+text-align: left;
+border: 1px solid #338855;
+margin: 0
+}
+
